--- a/src/main/resources/templates/page-files.html
+++ b/src/main/resources/templates/page-files.html
@@ -263,22 +263,24 @@
                     </div>
                 </div>
                 <div class="col-lg-12" id="breadcrumb" th:fragment="breadcrumbList">
-                    <nav aria-label="breadcrumb">
-                        <ol class="breadcrumb">
-                            <li class="breadcrumb-item " th:each="bc,loopStatus:${breadcrumb}" th:attr="data-id=${bc.id}">
-                                <a th:if="${loopStatus.count} eq ${loopStatus.size}" th:text="${bc.folderName}"></a>
-                                <a th:if="${loopStatus.count} ne ${loopStatus.size}" th:text="${bc.folderName}" th:onclick="initFolder([[${bc.id}]])" href="#" ></a>
-                            </li>
-                            <li class="breadcrumb-item" aria-current="page" data-toggle="modal" data-target="#exampleModalCenter">
-                                <a href="#">
-                                    <svg class="my-icon svg-icon" aria-hidden="true">
-                                        <use xlink:href="#icon-wenjianjia"></use>
-                                    </svg>
-                                    <span>文件夹</span>
-                                </a>
-                            </li>
-                        </ol>
-                    </nav>
+                    <div class="navbar-breadcrumb">
+                        <nav aria-label="breadcrumb">
+                            <ol class="breadcrumb">
+                                <li class="breadcrumb-item " th:each="bc,loopStatus:${breadcrumb}" th:attr="data-id=${bc.id}">
+                                    <a th:if="${loopStatus.count} eq ${loopStatus.size}" th:text="${bc.folderName}"></a>
+                                    <a th:if="${loopStatus.count} ne ${loopStatus.size}" th:text="${bc.folderName}" th:onclick="initFolder([[${bc.id}]])" href="#" ></a>
+                                </li>
+                                <li class="breadcrumb-item" aria-current="page" data-toggle="modal" data-target="#exampleModalCenter">
+                                    <a href="#">
+                                        <svg class="my-icon svg-icon" aria-hidden="true">
+                                            <use xlink:href="#icon-wenjianjia"></use>
+                                        </svg>
+                                        <span>文件夹</span>
+                                    </a>
+                                </li>
+                            </ol>
+                        </nav>
+                    </div>
                     <!-- Modal -->
                     <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                         <div class="modal-dialog" role="document">
@@ -306,15 +308,28 @@
             <div class="icon icon-grid i-grid">
                 <div class="row" id="gridTable" style="width: -webkit-fill-available;" th:fragment="gridTable">
                     <div class="col-lg-3 col-md-6 col-sm-6" th:each="folder:${folderList}">
-                        <div class="card card-block card-stretch card-height" th:onclick="initFolder([[${folder.id}]])">
+                        <div class="card card-block card-stretch card-height">
                             <div class="card-body image-thumb" style="cursor:pointer">
-                                <div class="mb-4 text-center p-3 rounded iq-thumb">
+                                <div class="mb-4 text-center p-3 rounded iq-thumb" th:onclick="initFolder([[${folder.id}]])">
                                     <div class="iq-image-overlay"></div>
                                     <svg class="my-icon svg-icon" aria-hidden="true" style="width: 100px;height: 100px;">
                                         <use xlink:href="#icon-wenjianjia2"></use>
                                     </svg>
                                 </div>
-                                <h6 th:text="${folder.folderName}"></h6>
+                                <div class="d-flex justify-content-between">
+                                    <h6 th:text="${folder.folderName}"></h6>
+                                    <div class="card-header-toolbar">
+                                        <div class="dropdown">
+                                            <span class="dropdown-toggle" id="dropdownMenuButton01" data-toggle="dropdown">
+                                                <i class="ri-more-2-fill"></i>
+                                            </span>
+                                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton01">
+                                                <a class="dropdown-item" href="#"><i class="ri-delete-bin-6-fill mr-2"></i>删除</a>
+                                                <a class="dropdown-item" href="#"><i class="ri-pencil-fill mr-2"></i>重命名</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -336,7 +351,20 @@
                                         <div class="iq-image-overlay"></div>
                                     </a>
                                 </div>
-                                <h6 th:text="${file.fileName}"></h6>
+                                <div class="d-flex justify-content-between">
+                                    <h6 th:text="${file.fileName}"></h6>
+                                    <div class="card-header-toolbar">
+                                        <div class="dropdown">
+                                            <span class="dropdown-toggle" id="dropdownMenuButton01" data-toggle="dropdown">
+                                                <i class="ri-more-2-fill"></i>
+                                            </span>
+                                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton01">
+                                                <a class="dropdown-item" href="#"><i class="ri-delete-bin-6-fill mr-2"></i>删除</a>
+                                                <a class="dropdown-item" href="#"><i class="ri-pencil-fill mr-2"></i>重命名</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
 
                         </div>
@@ -374,7 +402,7 @@
                                             </td>
                                             <td> </td>
                                             <td>文件夹</td>
-                                            <td>Ranger</td>
+                                            <td th:text="${folder.createdByName}"></td>
                                             <td th:text="${#temporals.format(folder.modifyTime,'yyyy-MM-dd HH:mm')}"></td>
                                             <td>
                                                 <div class="dropdown">
@@ -382,10 +410,9 @@
                                                         <i class="ri-more-fill"></i>
                                                     </span>
                                                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton10">
-                                                        <a class="dropdown-item" href="#"><i class="ri-eye-fill mr-2"></i>查看</a>
+                                                        <a class="dropdown-item" href="#" th:onclick="initFolder([[${folder.id}]])"><i class="ri-eye-fill mr-2"></i>查看</a>
                                                         <a class="dropdown-item" href="#"><i class="ri-delete-bin-6-fill mr-2"></i>删除</a>
-                                                        <a class="dropdown-item" href="#"><i class="ri-pencil-fill mr-2"></i>编辑</a>
-                                                        <a class="dropdown-item" href="#"><i class="ri-file-download-fill mr-2"></i>下载</a>
+                                                        <a class="dropdown-item" href="#"><i class="ri-pencil-fill mr-2"></i>重命名</a>
                                                     </div>
                                                 </div>
                                             </td>
@@ -412,7 +439,7 @@
                                             </td>
                                             <td th:text="${file.fileSizeVal}"></td>
                                             <td th:text="${file.fileType}"></td>
-                                            <td>Ranger</td>
+                                            <td th:text="${file.createdByName}"></td>
                                             <td th:text="${#temporals.format(file.modifyTime,'yyyy-MM-dd HH:mm')}"></td>
                                             <td>
                                                 <div class="dropdown">
@@ -422,7 +449,7 @@
                                                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton10">
                                                         <a class="dropdown-item" href="#"><i class="ri-eye-fill mr-2"></i>查看</a>
                                                         <a class="dropdown-item" href="#"><i class="ri-delete-bin-6-fill mr-2"></i>删除</a>
-                                                        <a class="dropdown-item" href="#"><i class="ri-pencil-fill mr-2"></i>编辑</a>
+                                                        <a class="dropdown-item" href="#"><i class="ri-pencil-fill mr-2"></i>重命名</a>
                                                         <a class="dropdown-item" href="#"><i class="ri-file-download-fill mr-2"></i>下载</a>
                                                     </div>
                                                 </div>
@@ -597,6 +624,9 @@
         listFile(folderId);
     }
 
+    /**
+     * 新增文件夹
+     */
     function addFolder(){
         let jQuery = $(".breadcrumb").children().last().prev();
         let parentId = $(jQuery).data("id");
@@ -615,6 +645,30 @@
         });
     }
 
+    /**
+     * 删除文件
+     */
+    function deleteFile(fileId){
+        $.ajax({
+            url:"/folder/delete",
+            type:"POST",
+            data:{folderName:folderName,parentId:parentId},
+            success:function (result) {
+                initFolder(result.data.id)
+            }
+        });
+    }
+
+    /**
+     * 删除文件夹
+     */
+    function deleteFolder(folderId){
+
+    }
+
+    /**
+     * 清除上传历史
+     */
     function cleanFileList(){
         $('#thelist').html("");
         $('#hasfile').addClass("hider");
